--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -1,13 +1,51 @@
 .main__header {
+  .rhap_main{
+    .rhap_progress-section {
+    }
+  }
+  .main__header__like{
+    position: absolute;
+    right: 136px;
+    bottom: 28px;
+    z-index: 1;
+    cursor: pointer;
+    img{
+      width: 26px;
+    }
+  }//main__header__like--END--
+  .main__header__sound-btn{
+    position: absolute;
+    right: 100px;
+    bottom: 28px;
+    z-index: 1;
+    cursor: pointer;
+    img{
+      width: 26px;
+    }
+  }//main__header__sound-btn--END--
   .rhap_progress-container {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: calc(100% - 60px);
     z-index: 1;
+    margin: 0 30px;
+    border-radius: 0;
+    height: 2px;
+    .rhap_progress-bar{
+      border-radius: 0;
+      position: relative !important;
+    }
+  }
+  .rhap_stacked{
+    .rhap_progress-section{
+      // position: absolute;
+      left: 0;
+    }
   }
   .rhap_stacked {
     .rhap_progress-section {
+      
       .rhap_time {
         gap: 8px;
         width: auto;
@@ -37,6 +75,7 @@
       }
     }
     .rhap_controls-section {
+      margin-top: 0;
       .rhap_main-controls {
         .rhap_main-controls-button {
         }
@@ -53,30 +92,39 @@
   align-items: center;
   gap: 16px;
   position: fixed;
-  bottom: 0;
-  right: 16px;
-  width: 100%;
-  height: 140px;
+  bottom: 16px;
+  left: 246px;
+  // right: 16px;
+  width: calc(100% - 262px);
+  height: 80px;
+  // height: 140px;
   padding: 20px 30px;
   z-index: 10;
   border-radius: 16px;
   border: 1px solid #222;
   background: #1a1a1a;
   transition: 0.6s;
-  overflow: hidden;
+  // overflow: hidden;
+
+  border-radius: 20px;
+  border: 1px solid #272727;
+  background: rgba(19, 19, 19, 0.50);
+  box-shadow: 0px 8px 12px 0px rgba(0, 0, 0, 0.50);
+  backdrop-filter: blur(15px);
+
   &.active {
     &.playing {
       .main__header__album-cover__img {
-        animation-play-state: running; // 애니메이션을 실행 상태로 변경
+        // animation-play-state: running; // 애니메이션을 실행 상태로 변경
       }
     }
     &.no-playing {
       .main__header__album-cover__img {
-        animation-play-state: paused !important;
+        // animation-play-state: paused !important;
       }
       .main__header__album-cover {
         &::after {
-          animation-play-state: paused !important;
+          // animation-play-state: paused !important;
         }
       }
     }
@@ -87,17 +135,18 @@
 
       animation-play-state: running;
       animation: rotate-disc 3s 0.6s linear infinite;
-      @keyframes rotate-disc {
-        from {
-          transform: rotate(0deg);
-        }
-        to {
-          transform: rotate(360deg);
-        }
-      }
+      // @keyframes rotate-disc {
+      //   from {
+      //     transform: rotate(0deg);
+      //   }
+      //   to {
+      //     transform: rotate(360deg);
+      //   }
+      // }
     }
     .main__header__album-cover {
       &::after {
+        display: none;
         animation: rotate-disc2 3s 0.6s linear infinite;
         animation-play-state: running;
         @keyframes rotate-disc2 {
@@ -120,33 +169,33 @@
     gap: 8px;
     position: relative;
     .main__header__album-cover__img {
-      border-radius: 100%;
+      border-radius: 4px;
       border: 1px solid #222;
       background-position: center;
       background-repeat: no-repeat;
-      background-size: 160%;
-      width: 60px;
-      height: 60px;
+      background-size: cover;
+      width: 40px;
+      height: 40px;
       flex-shrink: 0;
       position: relative;
       z-index: 1;
     } //main__header__album-cover__img--END--
-    &::after {
-      content: '';
-      width: 200px;
-      height: 200px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: url('../assets/images/album/album-bg.png') center no-repeat;
-      background-size: cover;
-      z-index: -2;
-    }
+    // &::after {
+    //   content: '';
+    //   width: 200px;
+    //   height: 200px;
+    //   position: absolute;
+    //   top: 50%;
+    //   left: 50%;
+    //   transform: translate(-50%, -50%);
+    //   background: url('../assets/images/album/album-bg.png') center no-repeat;
+    //   background-size: cover;
+    //   z-index: -2;
+    // }
     .main__header__title {
       position: absolute;
       top: 0;
-      left: 90px;
+      left: 52px;
       width: 240px;
     } //main__header__title--END--
   } //main__header__album-cover--END--
@@ -229,11 +278,27 @@
 
   // 오디오 라이브러리 ==============START===============
   .rhap_container {
-    padding: 10px 3px 10px 0;
+    // padding: 10px 3px 10px 0;
   }
   .rhap_main {
-    flex-direction: column-reverse;
-    gap: 8px;
+    // flex-direction: column-reverse;
+    // gap: 8px;
+    .rhap_progress-section{
+      .rhap_time.rhap_current-time{
+        position: absolute;
+        left: 82px;
+        bottom: 18px;
+      }
+      .rhap_time.rhap_total-time{
+        position: absolute;
+        left: 136px;
+        bottom: 18px;
+      }
+    }
+    // &>.rhap_progress-section{
+    //   position: absolute;
+    //   left: 0;
+    // }
     .rhap_time {
       color: #aaa !important;
       width: 54px;
@@ -264,11 +329,16 @@
     cursor: auto;
     position: absolute;
     right: 32px;
-    bottom: 8px;
-    width: 216px;
+    bottom: 33px;
+    width: 60px;
+    // transform: rotate(-90deg);
+    .rhap_button-clear{
+      display: none;
+    }
   }
   .rhap_progress-indicator {
     width: 10px;
+    display: none;
     background: #fff;
   }
   .rhap_volume-indicator {
@@ -289,18 +359,19 @@
   .rhap_button-clear {
     &.rhap_skip-button {
       svg {
-        font-size: 38px;
+        font-size: 26px;
       }
     }
     &.rhap_play-pause-button {
       position: relative;
       top: 2px;
       left: 2px;
-      margin: 0 32px;
+      // margin: 0 32px;
+      margin: 0;
       width: 50px;
       height: 50px;
       svg {
-        font-size: 50px;
+        font-size: 26px;
         // transform: scale(1.8);
       }
     }
@@ -453,6 +524,7 @@
       width: 100px;
       right: 0px;
       bottom: 16px;
+      
     }
   }
 }
