영진 수정 - 사운드 아이콘 추가

--- a/src/components/VerticalVolumeControl.scss
+++ b/src/components/VerticalVolumeControl.scss
@@ -15,9 +15,9 @@
   appearance: none;
   border: none;
   position: absolute;
-  top: 76%;
-  right: 10%;
-  transform: rotate(-90deg) translate(-50%, -50%);
+  top: 0%;
+  right: 0%;
+  transform: rotate(-90deg) ;
   transform-origin: center;
 
   /* 회전 전 길이는 컨테이너 높이(120px)와 일치해야 합니다 */
