--- a/src/components/PlayerHeader.scss
+++ b/src/components/PlayerHeader.scss
@@ -5,7 +5,7 @@
   }
   .main__header__like{
     position: absolute;
-    right: 136px;
+    right: 66px;
     bottom: 26px;
     z-index: 1;
     cursor: pointer;
@@ -15,7 +15,7 @@
   }//main__header__like--END--
   .main__header__sound-btn{
     position: absolute;
-    right: 100px;
+    right: 28px;
     bottom: 28px;
     z-index: 1;
     cursor: pointer;
@@ -332,10 +332,15 @@
     opacity: 1;
     cursor: auto;
     position: absolute;
-    right: 32px;
-    bottom: 33px;
+    right: -4px;
+    bottom: 86px;
     width: 60px;
+    z-index: 10;
     // transform: rotate(-90deg);
+    .vertical-volume-control{
+      width: auto;
+      height: auto;
+    }
     .rhap_button-clear{
       display: none;
     }
