영진 수정 메인 크리에이트 리스 완료

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -1109,6 +1109,11 @@
             flex:300px;
             flex-shrink: 0;
             min-height: 120px;
+            &:hover{
+              img{
+                transform: translate(0) !important;
+              }
+            }
             .main__to-day-header__song-create-list__item__title{
               font-size: 14px;
             }
