영진 수정 메인 크리에이트 리스 완료

--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -1098,7 +1098,7 @@
 @media screen and (max-width: 768px) {
   .main {
     // padding-top: 226px;
-    padding-top: 116px;
+    // padding-top: 116px;
     .main__to-day-header{
       .main__to-day-header__song-create{
         .main__to-day-header__song-create-list{
