영진 수정 - 노래 생성 모달 수정

--- a/src/components/create/GetStarted.scss
+++ b/src/components/create/GetStarted.scss
@@ -444,6 +444,11 @@
 }
 
 @media screen and (max-width: 768px) {
+  .privacy-option,
+  .creation-mode-options {
+    width: 100% !important;
+  }
+
   .create__get-started--version {
     &.active {
       .create__get-started--version__select {
