영진 수정 - 플레이어 바 수정 & 디테일 버튼 추가

--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -231,7 +231,7 @@
       justify-content: center;
 
       &.song {
-        background: #cf0;
+        // background: #cf0;
         position: relative;
         // top: -4px;
         // transition: 0.2s;
