--- a/src/styles/Album.scss
+++ b/src/styles/Album.scss
@@ -936,38 +936,69 @@
               }
             } //swiper-music-list__item__right__user__info--END--
             .swiper-music-list__item__right__user__btn {
-              width: 100%;
-              height: 24px;
-              background: #cf0;
-              position: relative;
-              top: 0;
-              transition: 0.2s;
-              color: var(--Text-dark-title, #1a1a1a);
-              font-family: Orbitron600;
-              font-size: 12px;
-              font-style: normal;
-              line-height: normal;
-              border-radius: 8px;
+              // width: 100%;
+              // height: 24px;
+              // background: #cf0;
+              // position: relative;
+              // top: 0;
+              // transition: 0.2s;
+              // color: var(--Text-dark-title, #1a1a1a);
+              // font-family: Orbitron600;
+              // font-size: 12px;
+              // font-style: normal;
+              // line-height: normal;
+              // border-radius: 8px;
+              // display: flex;
+              // align-items: center;
+              // justify-content: center;
+              // &::before {
+              //   content: '';
+              //   position: absolute;
+              //   left: 0;
+              //   top: 4px;
+              //   width: calc(100% - 2px);
+              //   transition: 0.2s;
+              //   border-radius: 8px;
+              //   height: 23px;
+              //   border: 1px solid #cf0;
+              // }
+              // &:hover {
+              //   top: 4px;
+              //   &::before {
+              //     top: 0;
+              //   }
+              // }
+
               display: flex;
               align-items: center;
               justify-content: center;
-              &::before {
-                content: '';
-                position: absolute;
-                left: 0;
-                top: 4px;
-                width: calc(100% - 2px);
-                transition: 0.2s;
-                border-radius: 8px;
-                height: 23px;
-                border: 1px solid #cf0;
-              }
+              width: 100%;
+              height: 30px;
+              background: url('../assets/images/details-bg2.png') center no-repeat !important;
+              background-size: 100% 100% !important;
+              overflow: hidden;
+              border-radius: 100px !important;
+              box-shadow: 0 0 20px 8px rgba(204, 255, 0, 0.08);
+              color: #f1f1f1 !important;
+              transition: 0.3s;
+              border: 1px solid transparent;
               &:hover {
-                top: 4px;
-                &::before {
-                  top: 0;
-                }
+                top: 0 !important;
+                border-radius: 36px;
+                border: 1px solid #80b17d !important;
+                background: linear-gradient(
+                  90deg,
+                  #4b5d00 0%,
+                  #61921f 40%,
+                  #7dc783 70%,
+                  #67b270 100%
+                ) !important;
+                box-shadow: 0px 1px 24px 0px rgba(204, 255, 0, 0.12) !important;
               }
+              &::before {
+                display: none !important;
+              }
+
             } //swiper-music-list__item__right__user__btn--END--
           } //swiper-music-list__item__right__user--END--
         } //swiper-music-list__item__right--END-
