영진 수정 - 푸터 수정

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -390,7 +390,7 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    padding-bottom: 40px;
+    // padding-bottom: 40px;
     .footer__top,
     .footer__bottom {
       flex-direction: column;
