영진 수정 - 디테일 버튼 색상 수정

--- a/src/components/mypage/songs/TopSongsTemplate.scss
+++ b/src/components/mypage/songs/TopSongsTemplate.scss
@@ -23,6 +23,7 @@
     width: calc(33.33% - 16px);
     .album__content-list__list__item {
       // width: 320px;
+      max-width: 320px;
     }
   }
   &__item--title {
