경세feat : 겟 디테일

--- a/src/styles/GetDetail.scss
+++ b/src/styles/GetDetail.scss
@@ -73,7 +73,8 @@
   }
 
   .get-detail__info {
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
     gap: 48px;
   }
 }
