--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,7 @@ body {
   color: #fff;
   box-sizing: border-box;
   font-size: 14px;
-  font-family: 'Orbitron500';
+  font-family: 'Orbitron500, Pretendard400';
 }
 *:focus {
   outline: 0;
