--- a/src/styles/AlbumDetail.scss
+++ b/src/styles/AlbumDetail.scss
@@ -1373,8 +1373,12 @@
           position: absolute;
           bottom: 16px;
           left: 16px;
-          padding: 4px 10px;
-          border-radius: 12px;
+          padding: 0 4px;
+          height: 22px;
+          min-width: 44px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           background: var(--Color-03, #222);
           box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.15);
           display: flex;
