--- a/src/components/get/Leaderboard.scss
+++ b/src/components/get/Leaderboard.scss
@@ -124,5 +124,9 @@
     gap: 4px;
     width: fit-content;
     margin: 0 auto;
+    align-items: center;
+    img {
+      height: 20px;
+    }
   }
 }
