영진 수정 - get pull

--- a/src/components/unit/AlbumItem.scss
+++ b/src/components/unit/AlbumItem.scss
@@ -145,8 +145,9 @@
       overflow: hidden;
       text-overflow: ellipsis;
       word-break: break-word;
-      height: 38px;
+      height: 34px;
       width: 134px;
+      line-height: 120%;
     } //album__content-list__list__item__right__title--END--
     .album__content-list__list__item__right__love-play {
       display: flex;
