--- a/src/styles/GetDetail.scss
+++ b/src/styles/GetDetail.scss
@@ -25,12 +25,14 @@
       color: #fff;
       font-size: 28px;
       font-family: Pretendard700;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
     }
     .desc {
       color: #fff;
       font-family: Pretendard400;
       font-size: 16px;
       line-height: 24px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.75);
     }
   }
 
