--- a/src/components/get/Dashboard.scss
+++ b/src/components/get/Dashboard.scss
@@ -65,6 +65,7 @@
       letter-spacing: 0.36px;
       background-color: #222;
       border-radius: 12px;
+      white-space: nowrap;
     }
   }
 
