--- a/src/styles/GetDetail.scss
+++ b/src/styles/GetDetail.scss
@@ -16,11 +16,13 @@
     background-size: cover;
   }
   .get-detail__banner--text-box {
+    width: 100%;
+    max-width: 1334px;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
     gap: 14px;
-    margin: 10%;
-
+    padding: 0px 16px;
     .title {
       color: #fff;
       font-size: 28px;
@@ -177,30 +179,25 @@
       margin-bottom: 8px;
     }
     &.m-8 {
-      margin:-8px 0;
+      margin: -8px 0;
     }
   }
 }
-
-
-
-
 
 @media screen and (max-width: 1200px) {
-  .get-detail{
-    .get-detail__info{
+  .get-detail {
+    .get-detail__info {
       gap: 16px;
     }
-    .get-detail-leaderboard{
+    .get-detail-leaderboard {
       gap: 16px;
     }
   }
 }
 
-
 @media screen and (max-width: 1024px) {
-  .get-detail{
-    .get-detail__info{
+  .get-detail {
+    .get-detail__info {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
     }
@@ -208,30 +205,28 @@
 }
 
 @media screen and (max-width: 768px) {
-  .get-detail-dashboard{
+  .get-detail-dashboard {
     flex-direction: column-reverse;
     gap: 16px;
   }
-  .get-detail-leaderboard{
+  .get-detail-leaderboard {
     grid-template-columns: repeat(1, 1fr);
     gap: 0px !important;
-    .get-detail-leaderboard__user{
+    .get-detail-leaderboard__user {
       width: 100%;
       flex: 1;
       margin-bottom: 16px;
     }
   }
-
 }
 
 @media screen and (max-width: 600px) {
-  .get-detail{
+  .get-detail {
     .get-detail__info {
       grid-template-columns: repeat(1, 1fr);
     }
-    .get-race-content-box{
+    .get-race-content-box {
       min-height: auto;
     }
   }
-
 }
